--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "project-name",
+	"name": "segel-team",
 	"description": "[Project description]",
-	"repository": "[repository-url]",
-	"author": "[YOUR NAME] <[YOUR-EMAIL]>",
+	"repository": "https://github.com/rudiszubert369/sailing-team",
+	"author": "filip sikora <filip.sikor@gmail.com>",
 	"version": "1.0.0",
 	"license": "ISC",
 	"type": "module",
